Added links to personal webpage in footer blog

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,9 +4,9 @@
     <p class="col-md-4 mb-0 text-body-secondary"><%= new Date().getFullYear() %> Aguero</p>
     <ul class="nav col-md-4 justify-content-end">
       <li class="nav-item"><a href="https://franciscojavieraguerojr.com/index.html" class="nav-link px-2 text-body-secondary">Home</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Projects</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Contact</a></li>
+      <li class="nav-item"><a href="https://franciscojavieraguerojr.com/about.html" class="nav-link px-2 text-body-secondary">About</a></li>
+      <li class="nav-item"><a href="https://franciscojavieraguerojr.com/project.html" class="nav-link px-2 text-body-secondary">Projects</a></li>
+      <li class="nav-item"><a href="https://franciscojavieraguerojr.com/contact.html" class="nav-link px-2 text-body-secondary">Contact</a></li>
     </ul>
   </footer>
   <p>mobile picture from <a href="www.Vecteezy.com">Vecteezy.com</a></p>
