Changed mobile picture

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
                 display: none;
             }
             body{
-                background: url(/public/images/vecteezy_abstract-technology-futuristic-neon-circle-glowing-blue-and_17095009.jpg);
+                background: url(/public/images/Neon\ oval\ phone\ wallpaper.jpg);
                 background-size: cover;
             }
         }
