Better navigation titles between sites

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,7 +18,7 @@
         <span class="fs-4">Chat Room</span>
       </a>
       <ul class = "nav-links">
-          <li><a href="/">Home</a></li>
+          <li><a href="/">Home Blog</a></li>
           <li class="center"><a href="/newpost">Quick Post</a></li>
       </ul>
     </header>
