rearranged the position of footer, header, and sites to handle empty sites

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,7 @@
             }
         }
     </style>
+    <div class="position-absolute top-50 start-50 translate-middle">
     <h1>Welcome</h1>
     <p class="lead">
         Select a topic to read more on:
@@ -615,4 +616,5 @@
         </div>
       </div>
     </p>
+</div>
 <%- include("partials/footer.ejs") %>
