--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,7 +10,7 @@
 <title>Chat Room</title>
 </head>
 <body class="d-flex h-100 text-center text-bg-dark car bat SW ">
-<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+<div class="fixed-top cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
 <header class="mb-auto">
 <div class="container">
     <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
