--- a/views/batmanblogpage.ejs
+++ b/views/batmanblogpage.ejs
@@ -23,6 +23,11 @@
       <button type="submit" onclick="deletePost()" class="btn btn-primary">Delete Post</button>
       <%} else {%>
       <p id="edit" class="card-text"></p>
+      <div class="new-post-btn iframe">
+        <button class="dropbtn" class="button-19" role="button">
+          New Post
+        </button>
+      </div>
       <% } %>
     <script>
       let userPost;
