--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,24 +3,14 @@
     <video autoplay muted loop id="background-video">
         <source src="/public/images/Animated Video Background - Saber Lighting Frame for Edits - Background video effects.mp4" type="video/mp4">
     </video>
-    <style>
-        @media (max-width: 768px) {
-            #background-video{
-                display: none;
-            }
-            body{
-                background: url(/public/images/Neon\ oval\ phone\ wallpaper.jpg);
-                background-size: cover;
-            }
-        }
-    </style>
-    <div class="position-absolute top-50 start-50 translate-middle">
-    <h1>Welcome</h1>
-    <p class="lead">
-        Select a topic to read more on:
-    </p>
-    <p class="lead">
-      <div class="container px-4 py-5" id="featured-3">
+    <div class="blog-links position-absolute top-50 start-50 translate-middle">
+    <div class="welcome-container">
+        <h1>Welcome</h1>
+        <p>
+            Select a topic to read more on:
+        </p>
+    </div>
+      <div class="container px-4 py-5 " id="featured-3">
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
           <div class="feature col">
             <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
