--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,9 +10,9 @@
 <title>Chat Room</title>
 </head>
 <body class="d-flex h-100 text-center text-bg-dark car bat SW ">
-<div class="fixed-top cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-<header class="mb-auto">
-<div class="container">
+<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+<header class="mb-auto header-container">
+<div class="container top-head-container">
     <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
       <a class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
         <span class="fs-4">Chat Room</span>
