--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,6 @@
 </main>
-<footer class="fixed-bottom d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-    <p class="col-md-4 mb-0 text-body-secondary"><%= new Date().getFullYear() %> Aguero</p>  
-    <p>mobile picture from <a href="www.Vecteezy.com">Vecteezy.com</a></p>
-    <p>mobile picture from <a href="www.peakpx.com">peakpx.com</a></p>
+<footer class="bottom-head-container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    <p class="col-md-4 mb-0 text-body-secondary"><%= new Date().getFullYear() %> Aguero</p>
     <ul class="nav col-md-4 justify-content-end">
       <li class="nav-item"><a href="https://franciscojavieraguerojr.com/index.html" class="nav-link px-2 text-body-secondary">Main Home</a></li>
       <li class="nav-item"><a href="https://franciscojavieraguerojr.com/about.html" class="nav-link px-2 text-body-secondary">About</a></li>
