--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -447,6 +447,12 @@ bottom: 0;
 z-index: -1;
 }
 
+.bottom-head-container{
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+}
+
 @media (max-width: 480px) {
   #background-video{
     display: none;
