made styles file scalable

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,7 +10,7 @@
 <title>Chat Room</title>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
-<body class="d-flex h-100 text-center text-bg-dark car bat SW ">
+<body class="d-flex h-100 text-center text-bg-dark <%= locals.theme ? theme : '' %>">
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
 <header class="mb-auto header-container">
 <div class="container top-head-container">
