--- a/views/starwarsblogpage.ejs
+++ b/views/starwarsblogpage.ejs
@@ -2,120 +2,7 @@
 <video autoplay muted loop id="background-video">
   <source src="/public/images/Kamino Star Wars Live Wallpaper.mp4" type="video/mp4">
 </video>
-<style>
-.center{
-  text-align: center;
-}
-.center-div-block{
-  width: 1300px;
-  position: relative;
-  margin: 0 auto;
-  clear: left;
-  height: auto;
-  z-index: 0;
-  text-align: center;
-  margin-bottom: 40%;
-}
-.post-div-block{
-  width: 1300px;
-  position: relative;
-  margin: 0 auto;
-  clear: left;
-  height: auto;
-  z-index: 0;
-}
-.card-text{
-  color: white;
-}
-.internal-blog-post{
-  width: 1300px;
-  background: blue;
-  position: relative;
-  margin: 0 auto;
-  clear: left;
-  height: auto;
-  z-index: 0;
-  margin: 50px 0;
-  border-radius: 50px;
-  background-color: black;
-  border: 3px solid yellow;
-  padding: 20px;
-}
-.plus-button{
-  background-color: transparent;
-  height: 35px;
-  width: 45px;
-  color: gray;
-  font-size: 1.5em;
-  box-shadow: 0 6px 6px rgba(0, 0, 0, 0.6);
-}
-.minus-button{
-  background-color: transparent;
-  height: 35px;
-  width: 45px;
-  color: gray;
-  font-size: 1.5em;
-  box-shadow: 0 6px 6px rgba(0, 0, 0, 0.6);
-} 
-.bottom-right{
-  position: absolute;
-  right: 45px;
-  bottom: 10;
-}
-.external-blog-post{
-  width: 1300px;
-  background: blue;
-  position: relative;
-  margin: 0 auto;
-  clear: left;
-  height: auto;
-  z-index: 0;
-  margin: 50px 0;
-  border-radius: 50px;
-  background-color: black;
-  border: 3px solid yellow;
-  padding: 20px;
-}
-.submit-form{
-  position: relative;
-  right: 33%;
-  border-radius: 4px;
-}
-.input-form{
-  position:relative;
-  font-size: 1.5em;
-  background: linear-gradient(21deg, #10abff, #1beabd);
-  padding: 3px;
-  display: inline-block;
-  border-radius: 9999em;
-
-*:not(span) {
-  position: relative;
-  display: inherit;
-  border-radius: inherit;
-  margin: 0;
-  border: none;
-  outline: none;
-  padding: 0 .325em;
-  z-index: 1; 
-  
-  &:focus + span {
-    opacity: 1;
-    transform: scale(1);
-  }
-}
-}
-  @media (max-width: 768px) {
-      #background-video{
-          display: none;
-      }
-      body{
-          background: url(/public/images/wp8277550-kamino-wallpapers.png);
-          background-size: cover;
-      }
-  }
-</style>
-<div class="center-div-block" id="container">
+<div class="center-div-block sw-theme" id="container">
   <div class="internal-blog-post" id="originalDiv">
     <% if (locals.blogPost ) { %> 
       <h5 >Your post is:</h5>
