--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,14 +2,11 @@
 <footer class="bottom-head-container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <p class="col-md-4 mb-0 text-body-secondary"><%= new Date().getFullYear() %> Aguero</p>
     <ul class="nav col-md-4 justify-content-end">
-      <li class="nav-item"><a href="https://franciscojavieraguerojr.com/index.html" class="nav-link px-2 text-body-secondary">Main Home</a></li>
-      <li class="nav-item"><a href="https://franciscojavieraguerojr.com/about.html" class="nav-link px-2 text-body-secondary">About</a></li>
-      <li class="nav-item"><a href="https://franciscojavieraguerojr.com/project.html" class="nav-link px-2 text-body-secondary">Projects</a></li>
-      <li class="nav-item"><a href="https://franciscojavieraguerojr.com/contact.html" class="nav-link px-2 text-body-secondary">Contact</a></li>
+      <li class="nav-item"><a href="/views/index.ejs" class="nav-link px-2 text-body-secondary">Home</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
     </ul>  
   </footer>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<script src="https://kit.fontawesome.com/89aa2b7dfe.js" crossorigin="anonymous"></script>
 </body>
 </html>
