--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,10 +7,11 @@
 <meta name="generator" content="Hugo 0.122.0">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <link rel="stylesheet" href="/public/styles/styles.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 <title>Chat Room</title>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
-<body class="d-flex h-100 text-center text-bg-dark <%= locals.theme ? theme : '' %>">
+<body class="d-flex h-100 text-center text-bg-dark <%= locals.theme ? theme + '-theme' : 'home-theme' %>">
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
 <header class="mb-auto header-container">
 <div class="container top-head-container">
