--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,11 +1,14 @@
 </main>
-<footer class="bottom-head-container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-    <p class="col-md-4 mb-0 text-body-secondary"><%= new Date().getFullYear() %> Aguero</p>
+<footer class="bottom-head-container border-top">
+  <div class="container d-flex flex-wrap justify-content-between align-items-center py-3">
+    <p class="col-md-4 mb-0 text-body-secondary">2026 Aguero</p>
+    
     <ul class="nav col-md-4 justify-content-end">
-      <li class="nav-item"><a href="/views/index.ejs" class="nav-link px-2 text-body-secondary">Home</a></li>
+      <li class="nav-item"><a href="/" class="nav-link px-2 text-body-secondary">Home</a></li>
       <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
-    </ul>  
-  </footer>
+    </ul>
+  </div>
+</footer>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
