--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,12 +1,14 @@
 </main>
-<footer class="bottom-head-container border-top">
-  <div class="container d-flex flex-wrap justify-content-between align-items-center py-3">
-    <p class="col-md-4 mb-0 text-body-secondary">2026 Aguero</p>
-    
-    <ul class="nav col-md-4 justify-content-end">
-      <li class="nav-item"><a href="/" class="nav-link px-2 text-body-secondary">Home</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
-    </ul>
+<footer class="footer-container">
+  <div class="container bottom-nav-container">
+    <div class="nav-links-style d-flex flex-wrap justify-content-between align-items-center">
+      <p class="col-md-4 mb-0 text-body-secondary">2026 Aguero</p>
+
+      <ul class="nav col-md-4 justify-content-end footer-links">
+        <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+      </ul>
+    </div>
   </div>
 </footer>
 </div>
