--- a/views/index.ejs
+++ b/views/index.ejs
@@ -440,11 +440,14 @@
                     </g>
                 </svg>
             </div>
-            <h3 class="fs-2 text-body-emphasis text-center">Star Wars</h3>
-            <p>Star Wars Community for Star Wars Fans</p>
-            <a href="/starwarsblogpage" class="icon-link">
-              Link to blog
+
+           <h2>Star Wars</h2>
+            <p>Join the Rebellion or the Empire.</p>
+            <a href="/starwars" class="blog-link sw-btn">
+            View Galaxy <i class="fa-solid fa-jedi"></i>
             </a>
+
+            
           </div>
           <div class="feature col">
             <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
@@ -552,11 +555,13 @@
                     <path fill="#ED1C24" d="M1024.1,407.4c-9.8,0.2-19.6,0.5-29.5,0.7c-7.4,0.2-15.4,0.2-21.6-3.8c-5.1-3.3-8.5-9.3-8.6-15.4&#10;&#9;&#9;&#9;c-0.1-5,1.8-9.7,3.6-14.3c1.4-3.5,2.8-7,4.1-10.5c0.6,11,6.7,21.5,16,27.5c2.1-8.6,7.7-16.2,15.2-20.8c-0.6,5.9-1.1,12.1,1.3,17.6&#10;&#9;&#9;&#9;c2.3,5.2,7,9.1,9.3,14.4c5.6-3.8,9.5-10,10.6-16.7C1027.2,392.8,1027.1,400.7,1024.1,407.4z"/>
                 </g></svg>
             </div>
-            <h3 class="fs-2 text-body-emphasis text-center">Cars</h3>
-            <p>Car Community for Car Guys or Gals</p>
-            <a href="/carsblogpage" class="icon-link">
-              Link to blog
+
+            <h2>Cars</h2>
+            <p>For the Petrol-heads and Speed-freaks.</p>
+            <a href="/cars" class="blog-link car-btn">
+            Start Engines <i class="fa-solid fa-gauge-high"></i>
             </a>
+
           </div>
           <div class="feature col">
             <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
@@ -596,12 +601,13 @@
                     c1.103-1.41,2.619-3.29,3.686-4.383l0.29-0.302C77.633,123.588,80.204,120.885,84.753,120.885z"/>
                 </svg>
             </div>
-            <h3 class="fs-2 text-body-emphasis text-center">Batman</h3>
-            <p>Batman Community for fans of the Dark Knight</p>
-            <a href="/batmanblogpage" class="icon-link">
-              Link to blog
-              <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
+
+            <h2>Batman</h2>
+            <p>Protect the streets of Gotham.</p>
+            <a href="/batman" class="blog-link batman-btn">
+            Enter Cave <i class="fa-solid fa-mask"></i>
             </a>
+
           </div>
         </div>
       </div>
