--- a/views/index.ejs
+++ b/views/index.ejs
@@ -443,7 +443,7 @@
 
            <h2>Star Wars</h2>
             <p>Join the Rebellion or the Empire.</p>
-            <a href="/starwars" class="blog-link sw-btn">
+            <a href="/starwarsblogpage" class="blog-link sw-btn">
             View Galaxy <i class="fa-solid fa-jedi"></i>
             </a>
 
@@ -558,7 +558,7 @@
 
             <h2>Cars</h2>
             <p>For the Petrol-heads and Speed-freaks.</p>
-            <a href="/cars" class="blog-link car-btn">
+            <a href="/carsblogpage" class="blog-link car-btn">
             Start Engines <i class="fa-solid fa-gauge-high"></i>
             </a>
 
@@ -604,7 +604,7 @@
 
             <h2>Batman</h2>
             <p>Protect the streets of Gotham.</p>
-            <a href="/batman" class="blog-link batman-btn">
+            <a href="/batmanblogpage" class="blog-link batman-btn">
             Enter Cave <i class="fa-solid fa-mask"></i>
             </a>
 
