--- a/views/starwarsblogpage.ejs
+++ b/views/starwarsblogpage.ejs
@@ -1,4 +1,7 @@
 <%- include("partials/header.ejs") %>
+<a href="/" class="back-btn">
+    <i class="fa-solid fa-chevron-left"></i> Back to Hub
+</a>
 <video autoplay muted loop id="background-video">
   <source src="/public/images/Kamino Star Wars Live Wallpaper.mp4" type="video/mp4">
 </video>
