--- a/views/carsblogpage.ejs
+++ b/views/carsblogpage.ejs
@@ -1,4 +1,7 @@
 <%- include("partials/header.ejs") %>
+<a href="/" class="back-btn">
+    <i class="fa-solid fa-chevron-left"></i> Back to Hub
+</a>
   <video autoplay muted loop id="background-video">
     <source src="/public/images/Live wallpaper bmw 5 min.mp4" type="video/mp4">
   </video>
