--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -6,7 +6,7 @@
 
       <ul class="nav col-md-4 justify-content-end footer-links">
         <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+        <li class="nav-item"><a href="/about" class="nav-link">About</a></li>
       </ul>
     </div>
   </div>
