--- a/views/newpost.ejs
+++ b/views/newpost.ejs
@@ -27,6 +27,7 @@
                     <option value="Car">Car Community</option>
                     <option value="Star_Wars">Star Wars Galaxy</option>
                     <option value="Batman">Gotham Streets</option>
+                    <option value="Tech">Technology Nexus</option>
                 </select>
             </div>
 
